# ssm-zenoh

./: .gitignore  .gitmodules  README
include/: Makefile.am  libssm.h  ssm.h
samples/C_Sample/: Makefile.am
samples/Cpp_Sample/: Makefile.am  intSsm.h  ssmReadSample.cpp  ssmWriteSample.cpp
src/: Makefile.am  libssm-shm.c  libssm.c  ssm-coordinator.cpp  ssm-zenoh-test.cpp  ssm-zenoh.cpp  ssm-zenoh.h
utilities/: Makefile.am  lsssm.c
zenoh_config/: default_config.json5  default_config_acl.json5  default_config_acl_client.json5  default_config_acl_server.json5  default_config_router.json5
